# kubesolv

./: README.md  docker-bake.hcl
chart/: Chart.yaml  values.yaml
chart/crds/: cubestate.yml  solvejob.yml  solver.yml
chart/templates/: crds.yml  default-solvers.yml  operator.yml  web.yml
chart/templates/solvers/: cfop-exploration.yml  nissy-light.yml  nissy-optimal.yml
operator/: Dockerfile  README.md
operator/src/kubesolv/: handlers.py
solvers/cfop/: Cargo.toml  Dockerfile
solvers/cfop-exploration/: Cargo.toml
solvers/cfop-exploration/src/: cfop_exploration.rs  lib.rs
solvers/cfop/src/: cfop_exploration.rs  lib.rs
solvers/cfop/src/util/: auf.rs  cross.rs  enumerate.rs  f2l.rs  greedy.rs  mod.rs  oll.rs  pll.rs
solvers/nissy/: Cargo.toml  Dockerfile
solvers/nissy/src/: lib.rs  light.rs  optimal.rs
solvers/solvers-py/: README.md
solvers/solvers-rs/: Cargo.toml  README.md
solvers/solvers-rs/src/: lib.rs  solver.rs
solvers/solvers-rs/src/cube/: compressed.rs  face.rs  mod.rs  moves.rs  plane.rs  scramble.rs  state.rs
solvers/solvers-rs/src/solver/: cfop_exploration.rs  mod.rs
solvers/solvers-rs/src/solver/util/: auf.rs  cross.rs  enumerate.rs  f2l.rs  greedy.rs  mod.rs  oll.rs  pll.rs  solved.rs
web/: README.md
web/rest-api/: README.md
web/ui/: README.md
