[package]
name = "kubesolv-solvers"
version = "0.1.0"
edition = "2021"

[lib]
name = "kubesolv_solvers"
path = "src/lib.rs"


[dependencies]
crossterm = "0.27"
itertools = "0.14.0"
rand = "0.9.2"
ratatui = "0.26"
rayon = "1.11.0"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "kubesolv-tui"
path = "src/bin/tui.rs"
